Fixed the other layout issue

--- a/client/src/app/@theme/layouts/one-column/one-column.layout.scss
+++ b/client/src/app/@theme/layouts/one-column/one-column.layout.scss
@@ -7,7 +7,7 @@
     padding-top: nb-theme(layout-padding-top);
   }
 
-  nb-layout-column {
+ .no-padding {
     padding: 0px !important; 
     background-color: #eeeeee
   }
